[tool.poetry]
name = "blackthorn"
version = "0.1.0"
description = "Python package for computing spectra from RH neutrinos"
authors = ["Logan A. Morrison <loganmorrison99@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.23.3"
helax = { git = "https://github.com/LoganAMorrison/helax" }
hazma = { path = "../Hazma/", develop = true }
rich = "*"
cleo = "*"
scipy = "^1.9.1"
Cython = "^0.29.32"
h5py = "^3.7.0"
HDMSpectra = { git = "https://github.com/nickrodd/HDMSpectra.git" }
jax = "^0.3.17"
jaxlib = "^0.3.15"
chex = "^0.1.4"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.5.3"
seaborn = "^0.12.0"
pandas = "^1.4.4"
jupyter = "^1.0.0"
pytest = "^7.1.3"
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate = "blackthorn.cli:generate"
