[metadata]
name = blackthorn
author = Logan Morrison
description = Project for computing RH neutrino spectra
license = MIT
classifiers = 
  Programming Language :: Python :: 3.6


[options]
zip_safe = False
python_requires = ">=3.6"
include_package_data = True
package_dir = 
  = blackthorn
packages = find:
test_requires = "pytest"

[options.packages.find]
where = blackthorn

[flake8]
max-line-length = 88
