[metadata]
name = blackthorn
version = 0.1.0
author = Logan Morrison
description = Project for computing RH neutrino spectra
license = MIT
classifiers = 
  Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
test_requires = "pytest"

[options.packages.find]
exclude =
  scipts*
  results*
  paper*
  notebooks*
  figures*

[options.package_data]
* = blackthorn/data/*.hdf5

[flake8]
max-line-length = 88
